--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,8 @@ dependencies:
   smooth_page_indicator: ^1.1.0
   google_fonts: ^6.1.0
   connectivity_plus: ^5.0.2
+  font_awesome_flutter: ^10.7.0
+  url_launcher: ^6.2.4
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
