--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,8 +45,8 @@ dependencies:
   google_fonts: ^6.1.0
   connectivity_plus: ^5.0.2
   font_awesome_flutter: ^10.7.0
-  url_launcher: ^6.2.4
   go_router: ^13.1.0
+  flutter_custom_tabs: ^2.0.0+1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
