--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   font_awesome_flutter: ^10.7.0
   go_router: ^13.1.0
   flutter_custom_tabs: ^2.0.0+1
+  dropdown_button2: ^2.3.9
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
