--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   go_router: ^13.1.0
   flutter_custom_tabs: ^2.0.0+1
   dropdown_button2: ^2.3.9
+  flutter_cached_pdfview: ^0.4.2
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
