--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,8 @@ dependencies:
   dropdown_button2: ^2.3.9
   flutter_cached_pdfview: ^0.4.2
   intl: ^0.19.0
+  auto_size_text: ^3.0.0
+  flutter_riverpod: ^2.5.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
